fix: enterprise overview: text wrapping in overview tables

--- a/src/app/core/enterpriseprofile/enterprise-overview/enterprise-overview.component.scss
+++ b/src/app/core/enterpriseprofile/enterprise-overview/enterprise-overview.component.scss
@@ -2,6 +2,7 @@
 
 .basic-row {
   @include center-vertical-horizontal();
+
   .logo-wrapper {
     height: 85px;
     width: 85px;
@@ -14,12 +15,25 @@
   }
 }
 
+
+/deep/ td:first-child {
+
+  width: 500px !important;
+  //overflow: auto;
+  word-wrap: break-word !important;
+  .textVal {
+    word-wrap: break-word !important;
+    max-width: 430px !important;
+  }
+}
+
 .basic-info-form {
   label {
     @include typography(11px, $line-height-md, $font-weight-normal, $color-secondary);
     padding-bottom: 0;
     margin-bottom: 0;
   }
+
   input {
     padding: 2px;
     margin-top: 0;
@@ -30,7 +44,7 @@
   }
 }
 
-form input{
+form input {
   @include typography($font-size-normal, $line-height-normal, $font-weight-normal, $color-text-normal);
 
 }
@@ -42,96 +56,114 @@ form input{
 
 }
 
-.form-title{
+.form-title {
   @include typography($font-size-sm, $line-height-md, $font-weight-700, $color-secondary);
   margin-bottom: 0;
 }
 
-.form-group{
+.form-group {
   padding-top: 1rem;
   margin-bottom: 0;
 }
 
-th,td{
+th, td {
   @include typography($font-size-normal, $line-height-normal, $font-weight-400, $color-text-grey);
 }
 
-.font-11{
+.font-11 {
   font-size: 11px;
 }
 
-.card-header{
+.card-header {
   padding: .5rem 1.25rem;
   background-color: transparent;
   @include typography($font-size-md, $line-height-normal, $font-weight-normal, $color-text-normal);
 }
-.card-header-description{
+
+.card-header-description {
   @include typography($font-size-xs, $line-height-normal, $font-weight-normal, $color-text-normal);
 }
-.form-control{
+
+.form-control {
   background-color: transparent;
 }
-.card{
+
+.card {
   background-color: #f0f3f4;
 }
-.bottom-border-line{
+
+.bottom-border-line {
   border-bottom: 1px solid #e0e0e0;
   padding-bottom: 2rem;
 }
-.modelBotNames{
+
+.modelBotNames {
   display: grid;
-  grid-template-columns: repeat(4,150px);
+  grid-template-columns: repeat(4, 150px);
   justify-content: center;
   align-items: center;
-  label{
+
+  label {
     text-align: left;
-    input{
-      width:13px;
+
+    input {
+      width: 13px;
       height: 13px;
     }
   }
 }
-.log-deletion{
-  padding-left: .5rem ;
-  .unit{
+
+.log-deletion {
+  padding-left: .5rem;
+
+  .unit {
     width: auto;
-    .date{
+
+    .date {
       @include typography($font-size-xs, $line-height-normal, $font-weight-400, #9e9e9e);
-      
+
     }
-    .count{
+
+    .count {
       @include typography($font-size-md, $line-height-normal, $font-weight-normal, $color-text-normal);
     }
   }
 }
-.access-tokens{
-  padding-left: 1rem ;
-  .heading{
+
+.access-tokens {
+  padding-left: 1rem;
+
+  .heading {
     @include typography($font-size-normal, $line-height-normal, $font-weight-400, $color-text-grey);
   }
-  .btn-theme{
+
+  .btn-theme {
     height: 24px !important;
     padding-left: 10px;
     padding-right: 10px;
   }
-  .btn-theme-primary-outline{
+
+  .btn-theme-primary-outline {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
   }
-  .btn-theme-primary{
+
+  .btn-theme-primary {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
 
   }
 }
-.modal-header{
+
+.modal-header {
   padding: 0;
-  .close{
+
+  .close {
     padding: 0;
     margin: 0;
   }
 }
 
-.profile-row{
+.profile-row {
   padding: .5rem 1.25rem;
 }
